添加medusa调试端口配置

--- a/nv/medusa/.env
+++ b/nv/medusa/.env
@@ -44,6 +44,7 @@ LICENSE_SERVER_PORT=21443
 #Study本服务域名
 STUDY_SERVER_DOMAIN=192.168.10.28
 STUDY_SERVER_PORT=20443
+STUDY_SERVER_DEBUG_PORT=25005
 
 
 
