--- a/nv/mysql/docker-compose8.yml
+++ b/nv/mysql/docker-compose8.yml
@@ -5,7 +5,7 @@ services:
     image: mysql
     environment:
       - MYSQL_ROOT_PASSWORD=123456
-      - MYSQL_DATABASE=dsz-data-base
+      - MYSQL_DATABASE=test-db
     volumes:
       - $PWD/conf:/etc/mysql/conf.d
       - $PWD/logs:/logs
